[gd_scene load_steps=5 format=3 uid="uid://cm7uxw0cq0ymo"]

[ext_resource type="Script" path="res://Scripts+Scenes/Cards/CardController.gd" id="1_5rub8"]
[ext_resource type="Script" path="res://Scripts+Scenes/Cards/Card.gd" id="2_etir8"]
[ext_resource type="Texture2D" uid="uid://cwq2iv3rf0cu" path="res://Assets/Cards/CardFront.png" id="3_xpgng"]
[ext_resource type="FontFile" uid="uid://b8u7jxcjx70ak" path="res://Assets/Fonts/PixelFont.tres" id="4_p3ex8"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 3
anchor_left = -0.046
anchor_top = -0.117
anchor_right = 1.0
anchor_bottom = 1.014
offset_left = 54.992
offset_top = 85.816
offset_right = -1033.0
offset_bottom = -486.072
script = ExtResource("1_5rub8")

[node name="Card" type="Node2D" parent="."]

[node name="Card" type="Button" parent="Card"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = -1
anchor_left = -0.047
anchor_top = -0.116
anchor_right = 0.043
anchor_bottom = 0.117
offset_left = -6.0
offset_top = -13.0
offset_right = 100.0
offset_bottom = 124.0
script = ExtResource("2_etir8")

[node name="CardBacking" type="ColorRect" parent="Card/Card"]
custom_minimum_size = Vector2(96, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.439216, 0.439216, 0.439216, 1)

[node name="CardSprite" type="Sprite2D" parent="Card/Card"]
position = Vector2(53, 69)
scale = Vector2(1.14583, 1.01429)
texture = ExtResource("3_xpgng")

[node name="Element" type="Sprite2D" parent="Card/Card"]
position = Vector2(109, 6)
scale = Vector2(0.625, 0.5625)
offset = Vector2(-15.7714, 9.90476)

[node name="PercentChance" type="RichTextLabel" parent="Card/Card"]
layout_mode = 0
offset_left = 89.0
offset_top = 26.0
offset_right = 109.0
offset_bottom = 41.0
scale = Vector2(0.9, 0.9)
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_p3ex8")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true

[node name="APCost" type="RichTextLabel" parent="Card/Card"]
layout_mode = 0
offset_left = 89.8572
offset_top = 43.0
offset_right = 120.857
offset_bottom = 66.0
scale = Vector2(1.1, 1.1)
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_p3ex8")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true

[node name="Name" type="RichTextLabel" parent="Card/Card"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.71429
offset_right = 75.0
offset_bottom = 20.7143
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_p3ex8")

[node name="Description" type="RichTextLabel" parent="Card/Card"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 95.0
offset_right = 111.0
offset_bottom = 135.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_p3ex8")

[node name="Picture" type="Sprite2D" parent="Card/Card"]
position = Vector2(37, 57)
scale = Vector2(1.125, 1.07813)
hframes = 2

[node name="Timer" type="Timer" parent="Card/Card"]

[connection signal="mouse_entered" from="Card/Card" to="Card/Card" method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="Card/Card" to="Card/Card" method="_on_Card_mouse_exited"]
